# xenon

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/gui/: CMakeLists.txt  window.cpp  window.hpp
src/misc/: CMakeLists.txt  hack_jthread.cpp  hack_jthread.hpp
src/network/: CMakeLists.txt  network.cpp  network.hpp
src/resources/: #resources.glade#  AboutDialog.glade~  CMakeLists.txt  TopMenu.glade~
src/resources/glade/: #resources.glade#  resources.glade  resources.glade~
test/: CMakeLists.txt  hack_jthread_test.cpp  network_test.cpp
test/misc/: CMakeLists.txt
